--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@fastify/cors": "^11.1.0",
     "@fastify/helmet": "^13.0.1",
     "@fastify/jwt": "^10.0.0",
-    "fastify": "^5.5.0"
+    "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.5",
+    "fastify": "^5.5.0",
+    "pg": "^8.16.3"
   }
 }
