--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fastify/cors": "^11.1.0",
     "@fastify/helmet": "^13.0.1",
     "@fastify/jwt": "^10.0.0",
+    "@fastify/type-provider-typebox": "^5.2.0",
+    "@sinclair/typebox": "^0.34.40",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
     "fastify": "^5.5.0",
