--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fastify/jwt": "^10.0.0",
     "@fastify/type-provider-typebox": "^5.2.0",
     "@sinclair/typebox": "^0.34.40",
+    "bcryptjs": "^3.0.2",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
     "fastify": "^5.5.0",
