--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
     "drizzle-orm": "^0.44.5",
     "fastify": "^5.5.0",
     "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^24.3.0",
+    "@types/pg": "^8.15.5",
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2"
   }
 }
