--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
     "@fastify/helmet": "^13.0.1",
     "@fastify/jwt": "^10.0.0",
+    "@fastify/rate-limit": "^10.3.0",
+    "@fastify/swagger": "^9.5.1",
     "@fastify/type-provider-typebox": "^5.2.0",
+    "@scalar/fastify-api-reference": "^1.34.4",
     "@sinclair/typebox": "^0.34.40",
     "bcryptjs": "^3.0.2",
     "drizzle-kit": "^0.31.4",
@@ -32,6 +36,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^24.3.0",
     "@types/pg": "^8.15.5",
+    "pino-pretty": "^13.1.1",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   }
