--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fastify/type-provider-typebox": "^5.2.0",
     "@scalar/fastify-api-reference": "^1.34.4",
     "@sinclair/typebox": "^0.34.40",
+    "argon2": "^0.44.0",
     "bcryptjs": "^3.0.2",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
