--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
     "fastify": "^5.5.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.10.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
